# cc

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.locust.yaml  docker-compose.yml  locustfile.py  manage.py  pyproject.toml  pytest.ini 
apps/cart/: admin.py  models.py  serializers.py  tests.py  utils.py  views.py
apps/cart/migrations/: 0001_initial.py
apps/faustapp/: app.py  apps.py  models.py
clearcode/: asgi.py  settings.py  urls.py
clearcode/core/: __init__.py  kafka_publisher.py  singleton.py
docs/: locust_report.html
